Ajout de la methode utilisateur/details/{id}
